# planecalib

./: .gitignore  CMakeLists.txt  LICENSE
3rdparty_new/: metis5.patch
3rdparty_new/freeglut-3.0.0-cmake/: CMakeLists.txt  version.cmake.in
3rdparty_new/glog-3.3-cmake/: CMakeLists.txt  config.cmake.in
3rdparty_new/matio-cmake/: matio-config.cmake
code/: CMakeLists.txt  echo_target.cmake
code/matlab/: DivisionModelDeriv.m  estimateHomographySyms.m  linearSystemFromConstraints.m  normH.m  plotSynthCompareError.asv  plotSynthCompareError.m  plotSynthError.m  testBouguetToolbox.asv  testBouguetToolbox.m
code/planecalib/: BaseRansac.h  BundleAdjuster.cpp  BundleAdjuster.h  CMakeLists.txt  CalibratedBundleAdjuster.cpp  CalibratedBundleAdjuster.h  CameraDistortionModel.cpp  CameraDistortionModel.h  CameraModel.cpp  CameraModel.h  CameraModelCeres.h  CeresParametrization.cpp  CeresParametrization.h  CeresUtils.h  FeatureIndexer.h  FeatureMatcher.cpp  FeatureMatcher.h  HomographyCalibration.cpp  HomographyCalibration.h  HomographyEstimation.cpp  HomographyEstimation.h  ImagePyramid.cpp  ImagePyramid.h  Keyframe.cpp  Keyframe.h  Map.cpp  Map.h  PlaneCalibSystem.cpp  PlaneCalibSystem.h  PnpEstimation.cpp  PnpEstimation.h  PoseEstimationCommon.h  PoseTracker.cpp  PoseTracker.h  Profiler.cpp  Profiler.h  ReprojectionError3D.cpp  ReprojectionError3D.h  ReprojectionError3DImpl.hpp  cvutils.cpp  (+8 more)
code/planecalib_desktop/: CMakeLists.txt  main.cpp
code/planecalib_ui/: Application.h  CMakeLists.txt  ImageDataSource.cpp  ImageDataSource.h  OpenCVDataSource.cpp  OpenCVDataSource.h  PlaneCalibApp.cpp  PlaneCalibApp.h  SequenceDataSource.cpp  SequenceDataSource.h  TextureHelper.cpp  TextureHelper.h  UserInterfaceInfo.cpp  UserInterfaceInfo.h  ViewportTiler.cpp  ViewportTiler.h  dummy.cpp  flags.h
code/planecalib_ui/assets/: WarpPosColorShader.frag  WarpPosColorShader.vert  colorCameraDivision_render.vert  texture_warp.frag  texture_warp.vert  texture_warp_fixed_alpha.frag  texture_warp_fixed_color.frag
code/planecalib_ui/shaders/: ColorCameraDivisionShader.cpp  ColorCameraDivisionShader.h  ColorCameraRadialShader.h.old  ColorCameraShader.cpp  ColorShader.cpp  ColorShader.h  DTSlamShaders.cpp  DTSlamShaders.h  ShaderProgram.cpp  ShaderProgram.h  Shaders.cpp  Shaders.h  StaticColors.cpp  StaticColors.h  TextRenderer.cpp  TextRenderer.h  TextShader.cpp  TextShader.h  TextureShader.cpp  TextureShader.h  TextureWarpShader.cpp  TextureWarpShader.h  WarpPosShader.cpp  WarpPosShader.h
code/planecalib_ui/tests/: BouguetInterface.cpp  BouguetInterface.h  SceneGenerator.cpp  SceneGenerator.h
code/planecalib_ui/windows/: ARWindow.cpp  ARWindow.h  BaseWindow.cpp  BaseWindow.h  MainWindow.cpp  MainWindow.h  MapWindow.cpp  MapWindow.h  TestWindow.cpp  TestWindow.h  WindowUtils.cpp  WindowUtils.h
datasets/: .gitignore  bb.yml
datasets/calibDanielNexus/: Calib_Results.m  Calib_Results.mat  calib_data.mat  doCalib.m  result.txt
datasets/calibOldCam/: Calib_Results.m
datasets/calibOldCam/calib/: Calib_Results.m  Calib_Results.mat  calib_data.mat
datasets/calibOldCam/old/: Calib_Results.mat  calib_data.mat
datasets/calibOldCam/valid/: calib_data.mat
datasets/calibWebcamDaniel/: Calib_Results.m  full_calib_data.mat
datasets/calibWebcamDaniel/calib/: Calib_Results.m  Calib_Results.mat  calib_data.mat
datasets/calibWebcamDaniel/old/: Calib_Results.mat  calib_data.mat  result.txt
datasets/calibWebcamDaniel/validate/: calib_data.mat
datasets/vuar33/calib/: Calib_Results.m  Calib_Results.mat  calib_data.mat
datasets/vuar33/valid/: calib_data.mat
paper/: .gitignore  egpaper_final.tex  egpaper_for_review.tex  iccv.sty  notation.tex  planecalib_paper.bib  planecalib_paper.brf  planecalib_paper.tex  planecalib_supplemental.tex  wacv.sty
paper/images/: basisVectors.pdf_tex  resultsNoNorm2.fig  resultsNormalAngle.pdf_tex
presentation/: FORGET THE CHECKERBOARD.pptx  basisVectors.emf
